--- a/io/Makefile
+++ b/io/Makefile
@@ -1,10 +1,10 @@
 
-CXXTARGETS	= AbstractMatrixFileWalkerCC
-CXXLDFLAGS 	= $(BoostLib)
-CTARGETS	= 
-SharedLibTargets	= AbstractMatrixFileWalkerCC.so
-
-SRCS	= AbstractMatrixFileWalkerCC.cc
+CXXTARGETS = AbstractMatrixFileWalkerCC
+CXXLDFLAGS = $(BoostLib)
+CTARGETS = 
+SharedLibTargets = AbstractMatrixFileWalkerCC.so
+StaticLibTargets = AbstractMatrixFileWalkerCC.a
+SRCS = AbstractMatrixFileWalkerCC.cc
 
 include ../Makefile.common
 #overwrite Makefile.common
