--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,12 +105,28 @@ InspectAlignmentPipeline:
       --dbname pmdb --schema sunset -u sunset_r -p yfishLabSunset
       --home_path /y/home/huangyu --pymodulePath `pwd`
       --tmpDir /y/scratch/tmp/huangyu/
-      -o Inspect_Aln_2112_2132.xml
+      -o InspectAln_2112_2132.xml
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
     paths:
-    - Inspect_Aln_2112_2132.xml
+    - InspectAln_2112_2132.xml
+
+InspectBaseQualityPipeline:
+  stage: test_run
+  script:
+    - echo "Output a InspectBaseQualityPipeline DAG ... "
+    - pwd
+    - ./ngs/qc/InspectBaseQualityPipeline.py -a 633 -i 650-850 -l condor -z pdc
+      --dbname pmdb --schema sunset -u sunset_r -p yfishLabSunset
+      --home_path /y/home/huangyu --pymodulePath `pwd`
+      --tmpDir /y/scratch/tmp/huangyu/
+      -o InspectBaseQuality_650_850.xml
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - InspectBaseQuality_650_850.xml
 
 uninstall:
   stage: uninstall
