--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,6 +150,18 @@ InspectBaseQuality:
     paths:
     - output
 
+ReduceMatrixBySumSameKeyColsAndThenDivide:
+  stage: test_run
+  script:
+    - echo "Test ReduceMatrixBySumSameKeyColsAndThenDivide.py"
+    - pwd
+    - ./reducer/ReduceMatrixBySumSameKeyColsAndThenDivide.py -k 1 -v 3,2 -o reducer/data/return_per_stock.tsv reducer/data/backtest_out.csv
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - reducer/data/return_per_stock.tsv
+
 uninstall:
   stage: uninstall
   script:
