--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -163,6 +163,20 @@ ReduceMatrixBySumSameKeyColsAndThenDivide:
     paths:
     - reducer/data/return_per_stock.csv
 
+AbstractPlot:
+  stage: test_run
+  script:
+    - echo "Test AbstractPlot"
+    - pwd
+    - ./plot/AbstractPlot.py -i reducer/data/backtest_out.csv 
+      -o reducer/data/rtn_vs_duration.png --xColumnHeader duration
+      --whichColumnHeader rtn
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - reducer/data/rtn_vs_duration.png
+
 uninstall:
   stage: uninstall
   script:
