--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,8 +155,8 @@ ReduceMatrixBySumSameKeyColsAndThenDivide:
   script:
     - echo "Test ReduceMatrixBySumSameKeyColsAndThenDivide.py"
     - pwd
-    - ./reducer/ReduceMatrixBySumSameKeyColsAndThenDivide.py -k 1 -v 3,2
-      -o reducer/data/return_per_stock.csv reducer/data/backtest_out.csv
+    - ./reducer/ReduceMatrixBySumSameKeyColsAndThenDivide.py -k 0 -v 7,6
+      -o reducer/data/return_per_stock.csv reducer/data/trade_merged.csv.gz
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
@@ -168,8 +168,8 @@ ReduceMatrixByAverageColumnsWithSameKey:
   script:
     - echo "Test ReduceMatrixByAverageColumnsWithSameKey.py"
     - pwd
-    - ./reducer/ReduceMatrixByAverageColumnsWithSameKey.py -k 4 -v 5
-      -o reducer/data/avg_rtn_duration.csv reducer/data/backtest_out.csv
+    - ./reducer/ReduceMatrixByAverageColumnsWithSameKey.py -k 3 -v 4
+      -o reducer/data/avg_rtn_duration.csv reducer/data/trade_merged.csv.gz
     - ./plot/AbstractPlot.py -i reducer/data/avg_rtn_duration.csv 
       -o reducer/data/median_rtn_vs_duration.png --xColumnHeader duration
       --whichColumnHeader median_rtn
@@ -189,9 +189,9 @@ AbstractPlot:
   script:
     - echo "Test AbstractPlot"
     - pwd
-    - ./plot/AbstractPlot.py -i reducer/data/backtest_out.csv 
-      -o reducer/data/rtn_vs_duration.png --xColumnHeader duration
-      --whichColumnHeader rtn
+    - ./plot/AbstractPlot.py -i reducer/data/trade_merged.csv.gz 
+      -o reducer/data/unit_rtn_vs_duration.png --xColumnHeader duration
+      --whichColumnHeader unit_rtn
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
