--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,18 +171,18 @@ ReduceMatrixByAverageColumnsWithSameKey:
     - ./reducer/ReduceMatrixByAverageColumnsWithSameKey.py -k 3 -v 4
       -o reducer/data/avg_rtn_duration.csv reducer/data/trade_merged.csv.gz
     - ./plot/AbstractPlot.py -i reducer/data/avg_rtn_duration.csv 
-      -o reducer/data/median_rtn_vs_duration.png --xColumnHeader duration
+      -o reducer/data/duration_vs_median_rtn.png --xColumnHeader duration
       --whichColumnHeader median_rtn
     - ./plot/AbstractPlot.py -i reducer/data/avg_rtn_duration.csv 
-      -o reducer/data/mean_rtn_vs_duration.png --xColumnHeader duration
+      -o reducer/data/duration_vs_mean_rtn.png --xColumnHeader duration
       --whichColumnHeader mean_rtn
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
     paths:
     - reducer/data/avg_rtn_duration.csv
-    - reducer/data/median_rtn_vs_duration.png
-    - reducer/data/mean_rtn_vs_duration.png
+    - reducer/data/duration_vs_median_rtn.png
+    - reducer/data/duration_vs_mean_rtn.png
 
 AbstractPlot:
   stage: test_run
@@ -190,13 +190,41 @@ AbstractPlot:
     - echo "Test AbstractPlot"
     - pwd
     - ./plot/AbstractPlot.py -i reducer/data/trade_merged.csv.gz 
-      -o reducer/data/unit_rtn_vs_duration.png --xColumnHeader duration
+      -o reducer/data/duration_vs_unit_rtn.png --xColumnHeader duration
       --whichColumnHeader unit_rtn
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
     paths:
-    - reducer/data/rtn_vs_duration.png
+    - reducer/data/duration_vs_unit_rtn.png
+
+
+DrawHistogram:
+  stage: test_run
+  script:
+    - echo "Test DrawHistogram"
+    - pwd
+    - ./plot/DrawHistogram.py -i reducer/data/trade_merged.csv.gz 
+      -o reducer/data/profit_hist.png --whichColumnHeader profit
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - reducer/data/profit_hist.png
+
+Draw2DHistogramOfMatrix:
+  stage: test_run
+  script:
+    - echo "Test Draw2DHistogramOfMatrix"
+    - pwd
+    - ./plot/Draw2DHistogramOfMatrix.py -i reducer/data/trade_merged.csv.gz 
+      -o reducer/data/signal_open_vs_unit_rtn_2D.png --xColumnHeader signal_open
+      --whichColumnHeader=unit_rtn
+  artifacts:
+    name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
+    expire_in: 3 mos
+    paths:
+    - reducer/data/signal_open_vs_unit_rtn_2D.png
 
 uninstall:
   stage: uninstall
