--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,7 +191,7 @@ AbstractPlot:
     - pwd
     - ./plot/AbstractPlot.py -i reducer/data/trade_merged.csv.gz 
       -o reducer/data/duration_vs_unit_rtn.png --xColumnHeader duration
-      --whichColumnHeader unit_rtn
+      --whichColumnHeader unit_rtn --fitType 1 --legendType 1
   artifacts:
     name: "${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}"
     expire_in: 3 mos
