enable Python2&3 compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ io/AbstractMatrixFileWalkerCC.a
 mapper/extractor/SelectRowsFromMatrixCC
 mapper/CalculateColCorBetweenTwoHDF5
 mapper/CalculateMedianMeanOfInputColumn
-reducer/ReduceSameChromosomeAlignmentDepthFiles
 mapper/FindMaxLDBetweenPeakAndEachLocus
+palos.orig
+reducer/ReduceSameChromosomeAlignmentDepthFiles
