use pip2 to install Python2 version of Palos

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ stages:
 Py2 install:
   stage: install
   script:
-    - pip install --user ./
+    - pip2 install --user ./
 
 Py3 install:
   stage: install
